--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,10 +4,11 @@
   <title>Web Page #1</title>
 </head>
 <body>
+  <img src="catpic.jpeg" alt="A photo of a cute kitten.">
   <h1>My first web page</h1>
-  <h2>Written with the guidance of Epicodus</h2>
-
-  <p> This is my first webpage!</p>
+  <h2>Written with the guidance of <em>Epicodus</em></h2>
+  <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
+  <p> This is my <strong>first web page</strong>!</p>
   <p>Isn't it nice?</p>
 
   <p>Here are some thingsI'm going to learn about coding:</p>
@@ -17,5 +18,6 @@
     <li>JavaScript</li>
     <li>And a lot more!</li>
   </ul>
+  <p>Here is a link to my <a href="favorite_things.html">favorite things</a>.</p>
 </body>
 </html>
