--- a/favorite_things.html
+++ b/favorite_things.html
@@ -8,15 +8,32 @@
   <h2>These are a few of my favorite things.</h2>
 
   <h3>People</h3>
-  <p>Here are some of my favorite people!</p>
+  <p>Here are some of my favorite <em>people!</em></p>
   <ul>
-    <li>My brother Christoper</li>
-    <li>My mom and dad:
+    <li>
+      <a href="http://www.example.com/christopher.html">
+        My brother <strong>Christoper</strong>
+        <img src="img/christopher.jpeg" alt="A photo of Christopher.">
+      </a>
+    </li>  
+    <li>
+      My mom and dad:
       <ul>
-        <li>Carol</li>
-        <li>Steve</li>
+        <li>
+          <a href="http://www.example.com/carol.html">
+            <strong>Carol</strong>
+            <img src="img/carol.jpeg" alt="A photo of Carol.">
+          </a>
+        </li>
+        <li>
+          <a href="http://www.example.com/steve.html">
+            <strong>Steve</strong></li>
+            <img src="img/steve.jpeg" alt="A photo of Steve.">
+          </a>
+        </li>  
       </ul>
     </li>
+
     <li>My friend Jessica</li>
     <li>My friend Candy</li>
   </ul>
